deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-ingress
  labels:
    name: hospital-ingress

  annotations:
    cert-manager.io/cluster-issuer: production
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"

spec:
  tls:
    - hosts:
        - hospital.wolffx.online
        - hospitalapi.wolffx.online
      secretName: hospital-backend-tls-secret

  ingressClassName: external-nginx
  rules:
    - host: hospital.wolffx.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-hospital-service
                port:
                  number: 3000

    - host: hospitalapi.wolffx.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hospital-backend-service
                port:
                  number: 8080
